Fix: Improve CORS config and skip JWT filter for OPTIONS requests